# oraidex-listing-contract

./: Cargo.toml
